@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-10T02:20:28Z",
+  "timestamp" : "2022-09-11T02:19:27Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 140,
-  "uniques" : 32,
+  "count" : 141,
+  "uniques" : 33,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-09-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
