@@ -1,3 +1,11 @@
+2022-09-11T02:19:27Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3030220244
+* notice: last 14d: unq all: 19 141
+* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 32 140
+* notice: next accum: outdated-unq outdated-all / unq all: 0 0 / 33 141
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-10]
+
 2022-09-10T02:20:28Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026392632
 * notice: last 14d: unq all: 19 140
